# StoreBackend

./: .env.example  .gitignore  Dockerfile  README.md  create_admin.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/dependencies/: base.py
app/enums/: base.py
app/exceptions/: base.py
app/models/: models.py
app/routes/admin/: ad.py  city.py  district.py  item_report.py  root.py  user_report.py  users.py
app/routes/general/: __init__.py  ad.py  city.py  district.py  item.py  item_report.py  root.py  store.py  user_report.py
app/routes/user/: buy_next_time_item.py  cart_item.py  order.py  root.py  store.py
app/schemas/: admin.py  general.py  user.py
app/settings/: base.py  mail.py
migrations/: env.py
src/: .env.example  alembic.ini  dependencies.py  enums.py  fake.py  main.py  models.py  schemas.py  settings.py
src/migrations/: env.py
src/migrations/versions/: 08e336c9d6dd_init.py  1416932a48d7_init.py  186aa23fb349_init.py  1cf6928e1d09_add_icons_for_store_and_item.py  206390466571_add_order_columns.py  2cc4101169f2_init.py  3634623894dc_init.py  6a3e1e3712d9_init.py  6ba884ae3fd9_init.py  74450a8c1357_init.py  80b4c7b658cd_reinit.py  97e3297e8de6_add_report_images.py  c230f529b1fc_init.py  d6ff957e3cf5_init.py  ec64003df9f1_init.py  feeb791a90e6_add_order_total_price.py
src/routes/: city.py  district.py  item.py  item_option.py  item_option_title.py  order.py  store.py  template.py  user.py
src/routes/admin/: ad.py  city.py  district.py  item_report.py  root.py  user_report.py  (+1 more)
src/schemas/: admin.py  general.py  user.py
(+14 files in other folders)
