[project]
name = "storebackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "cryptography>=46.0.2",
    "fastapi==0.110.0",
    "fastapi-mail>=1.5.0",
    "fastapi-pagination>=0.14.2",
    "passlib>=1.7.4",
    "pydantic>=2.11.9",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]
